Added custom questions to chat

--- a/website/templates/chats/chatquestion1.html
+++ b/website/templates/chats/chatquestion1.html
@@ -51,15 +51,15 @@
           <div class="col-md-8">
               <div class="card card-bordered" id="chatbox">
                   <div class="card-header">
-                      <h4 class="card-title"><strong>Chat with {{user}}</strong></h4>
+                      <h4 class="card-title"><strong>Chat with {{username}}</strong></h4>
                   </div>
 
                   <!-- User 1-->
                   <div class="ps-container ps-theme-default ps-active-y" id="chat-content" style="overflow-y: scroll !important; height:700px !important;">
                       <div class="media media-chat media-chat"> <img class="avatar" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
                           <div class="media-body">
-                              <p>Hi, there! Thanks for letting us know how you liked our service!</p>
-                              <p>We have one more question <br> THIS IS MY FIRST QUESTION</p>
+                              <p>Hi, there! If it's OK with you we'd like to ask you a couple of questions!</p>
+                              <p>{{question0}}</p>
                               <p class="meta"><time datetime="2018">23:58</time></p>
                           </div>
                       </div>
@@ -100,6 +100,6 @@
       objDiv.scrollTop = objDiv.scrollHeight;
 
     </script>
-
+<small>Feedback collected with Grapevine</small>
 </body>
 </html>
