--- a/website/templates/chats/chatquestion2.html
+++ b/website/templates/chats/chatquestion2.html
@@ -14,7 +14,7 @@
 
     <div class="media media-chat media-chat">
         <div class="media-body">
-            <p>Here is my SECOND question asking for an answer</p>
+            <p>{{question1}}</p>
             <p class="meta"><time datetime="2018">00:06</time></p>
         </div>    
     </div>    
