--- a/website/templates/chats/thanks.html
+++ b/website/templates/chats/thanks.html
@@ -14,7 +14,7 @@
 
     <div class="media media-chat media-chat">
         <div class="media-body">
-            <p>Here is my SECOND question asking for an answer</p>
+            <p>{{question1}}</p>
             <p class="meta"><time datetime="2018">00:06</time></p>
         </div>    
     </div>  
@@ -30,7 +30,7 @@
 
     <div class="media media-chat media-chat">
         <div class="media-body">
-            <p>Here is my THIRD question asking for an answer</p>
+            <p>{{question2}}</p>
             <p class="meta"><time datetime="2018">00:06</time></p>
         </div>    
     </div> 
@@ -52,7 +52,6 @@
         </div>    
     </div> 
 
-    <h2>Feedback made possible trough Grapevine</h2>
-
+    
 {% endblock%}
         
