--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -79,10 +79,12 @@
              <div class="container">
                  {% if user.is_authenticated %}
                  <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="GrapeVine"></a>
-                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}">GrapeVine</a>
+                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}">GrapeVine<span class="badge rounded-pill bg-light text-dark">Beta</span></a>
                  {% else %}
                  <a class="navbar-brand text-dark" href="/"> <img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="GrapeVine"></a>
-                 <a class="navbar-brand text-dark" href="/">GrapeVine</a>
+                <div></div> 
+                 <a class="navbar-brand text-dark" href="/" position-relative>GrapeVine</a><span class="badge rounded-pill bg-third">beta</span>
+  
                  {% endif%}
                  <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-dark rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                      <a class="btn bg-secondary-outline py-3 px-4 border-dark " href="/sign-in" >log in!</a>  
