--- a/website/templates/newstyle.html
+++ b/website/templates/newstyle.html
@@ -59,7 +59,7 @@
         <!-- Navigation-->
         <nav class="navbar bg-primary navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href="#page-top">GrapeVine</a>
+                <a class="navbar-brand fw-bold" href="#page-top">GrapeVine<span class="badge rounded-pill bg-light text-dark">Beta</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
