--- a/website/templates/theme.html
+++ b/website/templates/theme.html
@@ -78,10 +78,10 @@
             <div class="container">
                 {% if user.is_authenticated %}
                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="GrapeVine"></a>
-                <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}">GrapeVine</a>
+                <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}">GrapeVine</a><span class="badge rounded-pill bg-third">beta</span>
                 {% else %}
                 <a class="navbar-brand text-dark" href="/"> <img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="GrapeVine"></a>
-                <a class="navbar-brand text-dark" href="/">GrapeVine</a>
+                <a class="navbar-brand text-dark" href="/">GrapeVine</a><span class="badge rounded-pill bg-light text-dark">Beta</span>
                 {% endif%}
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-dark rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
